Add YouTube API client and youtubeLoaded helper

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>YouTube API client</title>
+    <script src="https://apis.google.com/js/client.js" async></script>
   </head>
   <body>
     <div id='root'>
