--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>YouTube API client</title>
     <script src="https://apis.google.com/js/client.js" async></script>
+    <style>
+      .clearfix:before, .clearfix:after { content: " "; display: table; }
+      .clearfix:after { clear: both; }
+    </style>
+
   </head>
   <body>
     <div id='root'>
