--- a/index.html
+++ b/index.html
@@ -2,30 +2,14 @@
 <html>
   <head>
     <title>YouTube API client</title>
+    <meta charset="utf-8" />
     <script src="https://apis.google.com/js/client.js" async></script>
-    <style>
-      .video-container {
-        position: relative;
-        padding-bottom: 56.45%;
-        padding-top: 30px;
-        height: 0;
-        overflow: hidden;
-      }
-
-      .video-container iframe,
-      .video-container object,
-      .video-container embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places"></script>
+    <link rel="stylesheet" media="all" href="/assets/style.css" />
   </head>
   <body>
-    <div id='root'>
+    <div id="root">
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
